cabal-version:  >=1.14
name:           expression
version:        0.1.0.0
x-follows-version-policy:
license:        BSD3
license-file:   LICENSE
copyright:      Ashley Yakeley <ashley@semantic.org>
author:         Ashley Yakeley <ashley@semantic.org>
maintainer:     Ashley Yakeley <ashley@semantic.org>
homepage:       https://github.com/AshleyYakeley/expression
bug-reports:    https://github.com/AshleyYakeley/expression/issues
synopsis:       Functional expressions
-- description:
category:       Language
build-type:     Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        NoImplicitPrelude
        RankNTypes
        KindSignatures
        GADTs
        ConstraintKinds
        TypeFamilies
        MultiParamTypeClasses
        FlexibleContexts
        FlexibleInstances
        TypeSynonymInstances
        PolyKinds
        DataKinds
    exposed-modules:
        Language.Expression.Expression
        Language.Expression.Mono
        Language.Expression.Regular
    other-modules:
        Import
    build-depends:
        base,
        transformers,
        witness,
        semigroupoids,
        constraints
    ghc-options: -Wall
